methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: Missing closing brace `}' assumed here
var booleen : Boolean = false
^SlugTracking:2: error: expected class or object definition
var booleen : Boolean = false
^SlugTracking:3: error: expected class or object definition
def isFacingTrail():Boolean = {
^